# mitscriptc

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh
p5/: .clangd  .gitignore  CMakeLists.txt  MITScript.g  README.md  compile_commands.json  instructions.md  main.cpp  xmake.lua
p5/.cache/clangd/index/: ANTLRErrorListener.cpp.5D96B00236BEBF05.idx  ANTLRErrorListener.h.3BA9E12E59EAC797.idx  ANTLRErrorStrategy.cpp.2D80B82D1E5281E4.idx  (+450 more)
p5/cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
p5/grammar/: MITScript.cpp  MITScript.h
p5/inputs/: deadcode.mit  test.mit  test.txt  test2.mit
p5/inputs/private/: test-list.custom  test35-funcArgOrder.mit
p5/itest/: bench.sh  test  test.sh
p5/itest/bench/: Readme  bignum.mit.output  kmediods.mit.output  treeproc.mit.input
p5/itest/gc/: garbagetest2.mit  garbagetest4.mit
p5/itest/gcpersonal/: gctest4.mit
p5/itest/new/: test2.mitbc  test3.mitbc
p5/itest/personal/: interptest3.mit  interptest5.mit
p5/itest/private/: test36-builtins.mit.out
p5/itest/public/: good14.mit.out
p5/src/: AST.h  Globals.h  Visitor.h  allocator.h  antlrtest.cpp  codegen.cpp  codegen.h  compiler.cpp  compiler.h  compilertest.cpp  const_propagator.cpp  const_propagator.h  dead_code_remover.cpp  dead_code_remover.h  ir.cpp  ir.h  irprinter.cpp  irprinter.h  optimizer.cpp  optimizer.h  parsercode.cpp  regalloc.cpp  regalloc.h  shape_analysis.cpp  shape_analysis.h  test  test.cpp  test_regalloc.cpp  type_inferer.cpp  type_inferer.h  utils.cpp  utils.h  value.cpp  value.h
p5/test/: regalloc_test.cpp  value_test.cpp
(+542 files in other folders)
